@@ -10553,6 +10553,17 @@ name|src
 argument_list|)
 throw|;
 block|}
+name|blockManager
+operator|.
+name|verifyReplication
+argument_list|(
+name|src
+argument_list|,
+name|replication
+argument_list|,
+name|clientMachine
+argument_list|)
+expr_stmt|;
 name|boolean
 name|skipSync
 init|=
@@ -10616,6 +10627,30 @@ argument_list|(
 name|src
 argument_list|)
 decl_stmt|;
+name|boolean
+name|create
+init|=
+name|flag
+operator|.
+name|contains
+argument_list|(
+name|CreateFlag
+operator|.
+name|CREATE
+argument_list|)
+decl_stmt|;
+name|boolean
+name|overwrite
+init|=
+name|flag
+operator|.
+name|contains
+argument_list|(
+name|CreateFlag
+operator|.
+name|OVERWRITE
+argument_list|)
+decl_stmt|;
 name|writeLock
 argument_list|()
 expr_stmt|;
@@ -10671,7 +10706,9 @@ name|holder
 argument_list|,
 name|clientMachine
 argument_list|,
-name|flag
+name|create
+argument_list|,
+name|overwrite
 argument_list|,
 name|createParent
 argument_list|,
@@ -10744,10 +10781,10 @@ return|return
 name|stat
 return|;
 block|}
-comment|/**    * Create new or open an existing file for append.<p>    *     * In case of opening the file for append, the method returns the last    * block of the file if this is a partial block, which can still be used    * for writing more data. The client uses the returned block locations    * to form the data pipeline for this block.<br>    * The method returns null if the last block is full or if this is a     * new file. The client then allocates a new block with the next call    * using {@link NameNode#addBlock()}.<p>    *    * For description of parameters and exceptions thrown see     * {@link ClientProtocol#create()}    *     * @return the last block locations if the block is partial or null otherwise    */
-DECL|method|startFileInternal (FSPermissionChecker pc, String src, PermissionStatus permissions, String holder, String clientMachine, EnumSet<CreateFlag> flag, boolean createParent, short replication, long blockSize)
+comment|/**    * Create a new file or overwrite an existing file<br>    *     * Once the file is create the client then allocates a new block with the next    * call using {@link NameNode#addBlock()}.    *<p>    * For description of parameters and exceptions thrown see    * {@link ClientProtocol#create()}    */
+DECL|method|startFileInternal (FSPermissionChecker pc, String src, PermissionStatus permissions, String holder, String clientMachine, boolean create, boolean overwrite, boolean createParent, short replication, long blockSize)
 specifier|private
-name|LocatedBlock
+name|void
 name|startFileInternal
 parameter_list|(
 name|FSPermissionChecker
@@ -10765,11 +10802,11 @@ parameter_list|,
 name|String
 name|clientMachine
 parameter_list|,
-name|EnumSet
-argument_list|<
-name|CreateFlag
-argument_list|>
-name|flag
+name|boolean
+name|create
+parameter_list|,
+name|boolean
+name|overwrite
 parameter_list|,
 name|boolean
 name|createParent
@@ -10781,8 +10818,6 @@ name|long
 name|blockSize
 parameter_list|)
 throws|throws
-name|SafeModeException
-throws|,
 name|FileAlreadyExistsException
 throws|,
 name|AccessControlException
@@ -10859,30 +10894,6 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
-name|boolean
-name|overwrite
-init|=
-name|flag
-operator|.
-name|contains
-argument_list|(
-name|CreateFlag
-operator|.
-name|OVERWRITE
-argument_list|)
-decl_stmt|;
-name|boolean
-name|append
-init|=
-name|flag
-operator|.
-name|contains
-argument_list|(
-name|CreateFlag
-operator|.
-name|APPEND
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|isPermissionEnabled
@@ -10890,15 +10901,11 @@ condition|)
 block|{
 if|if
 condition|(
-name|append
-operator|||
-operator|(
 name|overwrite
 operator|&&
 name|myFile
 operator|!=
 literal|null
-operator|)
 condition|)
 block|{
 name|checkPathAccess
@@ -10942,29 +10949,6 @@ expr_stmt|;
 block|}
 try|try
 block|{
-name|blockManager
-operator|.
-name|verifyReplication
-argument_list|(
-name|src
-argument_list|,
-name|replication
-argument_list|,
-name|clientMachine
-argument_list|)
-expr_stmt|;
-name|boolean
-name|create
-init|=
-name|flag
-operator|.
-name|contains
-argument_list|(
-name|CreateFlag
-operator|.
-name|CREATE
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|myFile
@@ -10982,7 +10966,7 @@ throw|throw
 operator|new
 name|FileNotFoundException
 argument_list|(
-literal|"failed to overwrite or append to non-existent file "
+literal|"failed to overwrite non-existent file "
 operator|+
 name|src
 operator|+
@@ -10995,7 +10979,6 @@ block|}
 block|}
 else|else
 block|{
-comment|// File exists - must be one of append or overwrite
 if|if
 condition|(
 name|overwrite
@@ -11008,10 +10991,11 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+comment|// File exists - delete if overwrite
 block|}
 else|else
 block|{
-comment|// Opening an existing file for write - may need to recover lease.
+comment|// If lease soft limit time is expired, recover the lease
 name|recoverLeaseInternal
 argument_list|(
 name|myFile
@@ -11025,12 +11009,6 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|append
-condition|)
-block|{
 throw|throw
 operator|new
 name|FileAlreadyExistsException
@@ -11048,7 +11026,9 @@ argument_list|)
 throw|;
 block|}
 block|}
-block|}
+name|checkFsObjectLimit
+argument_list|()
+expr_stmt|;
 specifier|final
 name|DatanodeDescriptor
 name|clientNode
@@ -11063,59 +11043,6 @@ argument_list|(
 name|clientMachine
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|append
-operator|&&
-name|myFile
-operator|!=
-literal|null
-condition|)
-block|{
-specifier|final
-name|INodeFile
-name|f
-init|=
-name|INodeFile
-operator|.
-name|valueOf
-argument_list|(
-name|myFile
-argument_list|,
-name|src
-argument_list|)
-decl_stmt|;
-return|return
-name|prepareFileForWrite
-argument_list|(
-name|src
-argument_list|,
-name|f
-argument_list|,
-name|holder
-argument_list|,
-name|clientMachine
-argument_list|,
-name|clientNode
-argument_list|,
-literal|true
-argument_list|,
-name|iip
-operator|.
-name|getLatestSnapshot
-argument_list|()
-argument_list|)
-return|;
-block|}
-else|else
-block|{
-comment|// Now we can add the name to the filesystem. This file has no
-comment|// blocks associated with it.
-comment|//
-name|checkFsObjectLimit
-argument_list|()
-expr_stmt|;
-comment|// increment global generation stamp
 name|INodeFileUnderConstruction
 name|newNode
 init|=
@@ -11207,7 +11134,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-block|}
 catch|catch
 parameter_list|(
 name|IOException
@@ -11232,9 +11158,212 @@ throw|throw
 name|ie
 throw|;
 block|}
-return|return
+block|}
+comment|/**    * Append to an existing file for append.    *<p>    *     * The method returns the last block of the file if this is a partial block,    * which can still be used for writing more data. The client uses the returned    * block locations to form the data pipeline for this block.<br>    * The method returns null if the last block is full. The client then    * allocates a new block with the next call using {@link NameNode#addBlock()}.    *<p>    *     * For description of parameters and exceptions thrown see    * {@link ClientProtocol#append(String, String)}    *     * @return the last block locations if the block is partial or null otherwise    */
+DECL|method|appendFileInternal (FSPermissionChecker pc, String src, String holder, String clientMachine)
+specifier|private
+name|LocatedBlock
+name|appendFileInternal
+parameter_list|(
+name|FSPermissionChecker
+name|pc
+parameter_list|,
+name|String
+name|src
+parameter_list|,
+name|String
+name|holder
+parameter_list|,
+name|String
+name|clientMachine
+parameter_list|)
+throws|throws
+name|AccessControlException
+throws|,
+name|UnresolvedLinkException
+throws|,
+name|FileNotFoundException
+throws|,
+name|IOException
+block|{
+assert|assert
+name|hasWriteLock
+argument_list|()
+assert|;
+comment|// Verify that the destination does not exist as a directory already.
+specifier|final
+name|INodesInPath
+name|iip
+init|=
+name|dir
+operator|.
+name|getINodesInPath4Write
+argument_list|(
+name|src
+argument_list|)
+decl_stmt|;
+specifier|final
+name|INode
+name|inode
+init|=
+name|iip
+operator|.
+name|getLastINode
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|inode
+operator|!=
 literal|null
+operator|&&
+name|inode
+operator|.
+name|isDirectory
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|FileAlreadyExistsException
+argument_list|(
+literal|"Cannot append to directory "
+operator|+
+name|src
+operator|+
+literal|"; already exists as a directory."
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|isPermissionEnabled
+condition|)
+block|{
+name|checkPathAccess
+argument_list|(
+name|pc
+argument_list|,
+name|src
+argument_list|,
+name|FsAction
+operator|.
+name|WRITE
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+if|if
+condition|(
+name|inode
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|FileNotFoundException
+argument_list|(
+literal|"failed to append to non-existent file "
+operator|+
+name|src
+operator|+
+literal|" on client "
+operator|+
+name|clientMachine
+argument_list|)
+throw|;
+block|}
+specifier|final
+name|INodeFile
+name|myFile
+init|=
+name|INodeFile
+operator|.
+name|valueOf
+argument_list|(
+name|inode
+argument_list|,
+name|src
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+comment|// Opening an existing file for write - may need to recover lease.
+name|recoverLeaseInternal
+argument_list|(
+name|myFile
+argument_list|,
+name|src
+argument_list|,
+name|holder
+argument_list|,
+name|clientMachine
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+specifier|final
+name|DatanodeDescriptor
+name|clientNode
+init|=
+name|blockManager
+operator|.
+name|getDatanodeManager
+argument_list|()
+operator|.
+name|getDatanodeByHost
+argument_list|(
+name|clientMachine
+argument_list|)
+decl_stmt|;
+return|return
+name|prepareFileForWrite
+argument_list|(
+name|src
+argument_list|,
+name|myFile
+argument_list|,
+name|holder
+argument_list|,
+name|clientMachine
+argument_list|,
+name|clientNode
+argument_list|,
+literal|true
+argument_list|,
+name|iip
+operator|.
+name|getLatestSnapshot
+argument_list|()
+argument_list|)
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ie
+parameter_list|)
+block|{
+name|NameNode
+operator|.
+name|stateChangeLog
+operator|.
+name|warn
+argument_list|(
+literal|"DIR* NameSystem.append: "
+operator|+
+name|ie
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+throw|throw
+name|ie
+throw|;
+block|}
 block|}
 comment|/**    * Replace current node with a INodeUnderConstruction.    * Recreate in-memory lease record.    *     * @param src path to the file    * @param file existing file object    * @param leaseHolder identifier of the lease holder on this file    * @param clientMachine identifier of the client machine    * @param clientNode if the client is collocated with a DN, that DN's descriptor    * @param writeToEditLog whether to persist this change to the edit log    * @return the last block locations if the block is partial or null otherwise    * @throws UnresolvedLinkException    * @throws IOException    */
 DECL|method|prepareFileForWrite (String src, INodeFile file, String leaseHolder, String clientMachine, DatanodeDescriptor clientNode, boolean writeToEditLog, Snapshot latestSnapshot)
@@ -12089,55 +12218,6 @@ literal|" configuration option to enable it."
 argument_list|)
 throw|;
 block|}
-if|if
-condition|(
-name|NameNode
-operator|.
-name|stateChangeLog
-operator|.
-name|isDebugEnabled
-argument_list|()
-condition|)
-block|{
-name|NameNode
-operator|.
-name|stateChangeLog
-operator|.
-name|debug
-argument_list|(
-literal|"DIR* NameSystem.appendFile: src="
-operator|+
-name|src
-operator|+
-literal|", holder="
-operator|+
-name|holder
-operator|+
-literal|", clientMachine="
-operator|+
-name|clientMachine
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-operator|!
-name|DFSUtil
-operator|.
-name|isValidName
-argument_list|(
-name|src
-argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|InvalidPathException
-argument_list|(
-name|src
-argument_list|)
-throw|;
-block|}
 name|LocatedBlock
 name|lb
 init|=
@@ -12213,34 +12293,15 @@ argument_list|)
 expr_stmt|;
 name|lb
 operator|=
-name|startFileInternal
+name|appendFileInternal
 argument_list|(
 name|pc
 argument_list|,
 name|src
 argument_list|,
-literal|null
-argument_list|,
 name|holder
 argument_list|,
 name|clientMachine
-argument_list|,
-name|EnumSet
-operator|.
-name|of
-argument_list|(
-name|CreateFlag
-operator|.
-name|APPEND
-argument_list|)
-argument_list|,
-literal|false
-argument_list|,
-name|blockManager
-operator|.
-name|maxReplication
-argument_list|,
-literal|0
 argument_list|)
 expr_stmt|;
 block|}
