@@ -602,6 +602,22 @@ name|hdfs
 operator|.
 name|protocol
 operator|.
+name|AlreadyBeingCreatedException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|protocol
+operator|.
 name|Block
 import|;
 end_import
@@ -3038,9 +3054,6 @@ argument_list|()
 expr_stmt|;
 name|dfs
 operator|=
-operator|(
-name|DistributedFileSystem
-operator|)
 name|cluster
 operator|.
 name|getFileSystem
@@ -3380,9 +3393,6 @@ argument_list|()
 expr_stmt|;
 name|dfs
 operator|=
-operator|(
-name|DistributedFileSystem
-operator|)
 name|cluster
 operator|.
 name|getFileSystem
@@ -4138,12 +4148,7 @@ comment|// verify that new block is associated with this file
 name|DFSClient
 name|client
 init|=
-operator|(
-operator|(
-name|DistributedFileSystem
-operator|)
 name|fs
-operator|)
 operator|.
 name|dfs
 decl_stmt|;
@@ -5582,9 +5587,6 @@ argument_list|()
 expr_stmt|;
 name|dfs
 operator|=
-operator|(
-name|DistributedFileSystem
-operator|)
 name|cluster
 operator|.
 name|getFileSystem
@@ -5976,9 +5978,6 @@ argument_list|()
 expr_stmt|;
 name|dfs
 operator|=
-operator|(
-name|DistributedFileSystem
-operator|)
 name|cluster
 operator|.
 name|getFileSystem
@@ -6148,9 +6147,6 @@ argument_list|()
 expr_stmt|;
 name|dfs
 operator|=
-operator|(
-name|DistributedFileSystem
-operator|)
 name|cluster
 operator|.
 name|getFileSystem
@@ -6666,9 +6662,6 @@ argument_list|()
 expr_stmt|;
 name|dfs
 operator|=
-operator|(
-name|DistributedFileSystem
-operator|)
 name|cluster
 operator|.
 name|getFileSystem
